syntax = "proto3";

package route256.loms.pkg.loms.v1;

option go_package = "github.com/CatMacales/route256/loms/pkg/api/loms/v1;loms";

import "validate/validate.proto";
import "google/api/annotations.proto";

service LOMS{
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){
    option (google.api.http) = {
      post: "/v1/orders/create",
      body: "items"
    };
  }

  rpc GetOrderInfo(GetOrderInfoRequest) returns (GetOrderInfoResponse){
    option (google.api.http) = {
      get: "/v1/orders/{order_id}"
    };
  }

  rpc PayOrder(PayOrderRequest) returns (PayOrderResponse){
    option (google.api.http) = {
      post: "/v1/orders/{order_id}/pay"
    };
  }

  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse){
    option (google.api.http) = {
      post: "/v1/orders/{order_id}/cancel"
    };
  }

  rpc GetStockInfo(GetStockInfoRequest) returns (GetStockInfoResponse){
    option (google.api.http) = {
      get: "/v1/stocks/{sku}"
    };
  }
}

message CreateOrderRequest{
  int64 user_id = 1 [(validate.rules).int64.gt = 0];
  repeated Item items = 2 [(validate.rules).repeated.items.message.required = true];
}

message CreateOrderResponse{
  string order_id = 1;
}

message GetOrderInfoRequest{
  string order_id = 1[(validate.rules).string.uuid = true];
}

message GetOrderInfoResponse{
  OrderStatus status = 1;
  int64 user_id = 2;
  repeated Item items = 3;
}

message PayOrderRequest{
  string order_id = 1 [(validate.rules).string.uuid = true];
}

message PayOrderResponse{

}

message CancelOrderRequest{
  string order_id = 1 [(validate.rules).string.uuid = true];
}

message CancelOrderResponse{

}

message GetStockInfoRequest{
  uint32 sku = 1 [(validate.rules).uint32.gt = 0];
}

message GetStockInfoResponse{
  uint64 count = 1;
}

message Item{
  uint32 sku = 1 [(validate.rules).uint32.gt = 0];
  uint32 count = 2[(validate.rules).uint32 = {gt:0,lte:65535}];
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_NEW = 1;
  ORDER_STATUS_AWAITING_PAYMENT = 2;
  ORDER_STATUS_FAILED = 3;
  ORDER_STATUS_PAYED = 4;
  ORDER_STATUS_CANCELED = 5;
}
